--- a/keci/templates/help.html
+++ b/keci/templates/help.html
@@ -1,6 +1,7 @@
-{% extends "index1.html" %}
+{% extends "index.html" %}
 {% block title %}
   <title>Yardım</title>
 {% endblock %}
 {% block content %}
+<a href="{% url 'download_pdf' id='ec78bc1c-0202-4445-a48f-b154c4ceeaa8' %}">sdsd</a>
 {% endblock %}
