--- a/keci/templates/new_project.html
+++ b/keci/templates/new_project.html
@@ -3,4 +3,15 @@
   <title>Yeni Proje</title>
 {% endblock %}
 {% block content %}
+
+rr
+<form action="{% url 'new_project' %}" method="post" enctype="multipart/form-data">
+  {% csrf_token %}
+  {{ form }}
+  <input type="submit" value="Submit">
+</form>
+aa
+{{ file }}
+aa
+
 {% endblock %}
