Add searchbar and change related view function

--- a/keci/templates/project.html
+++ b/keci/templates/project.html
@@ -40,5 +40,6 @@ k-id:{{ project.id }}
   \[x = {-b \pm \sqrt{b^2-4ac} \over 2a}.\]
 </p>
 
+<a href="{% url 'download_pdf' id='ec78bc1c-0202-4445-a48f-b154c4ceeaa8' %}">sdsd</a>
 
 {% endblock %}
