--- a/keci/static/css/keci.css
+++ b/keci/static/css/keci.css
@@ -137,3 +137,43 @@
     font-weight: 600;
     font-size: 14px;
   }
+
+  /**************************************************/
+  /* keci_search */
+
+  .box {
+    box-sizing: content-box;
+    align-items: center;
+    background-color: rgb(255, 255, 255);
+    border-bottom-left-radius: 2px;
+    border-bottom-right-radius: 2px;
+    border-top-left-radius: 2px;
+    border-top-right-radius: 2px;
+    box-shadow: rgba(10, 10, 10, 0.1) 0px 2px 3px, rgba(10, 10, 10, 0.1) 0px 0px 0px 1px;
+    color: rgb(51, 51, 51);
+    display: flex;
+    flex-basis: auto;
+    flex-grow: 0;
+    flex-shrink: 0;
+    flex-wrap: wrap;
+    font-family: "Open Sans", "Lucida Grande", "Helvetica Neue", Helvetica, Arial, sans-serif;
+    font-size: 14px;
+    font-weight: 400;
+    justify-content: flex-start;
+    line-height: 21px;
+    margin-bottom: -10.5px;
+    padding-top: 10.5px;
+    padding-bottom: 10.5px;
+    padding-right: 10.5px;
+    padding-left: 10.5px;
+    text-rendering: optimizeLegibility;
+  }
+
+  .level {
+    align-items: center;
+    box-sizing: content-box;
+    margin-bottom: 21px;
+    justify-content: space-between;
+    margin-left: 140px;
+    margin-right: 140px;
+  }
