--- a/keci/templates/help.html
+++ b/keci/templates/help.html
@@ -3,5 +3,32 @@
   <title>Yardım</title>
 {% endblock %}
 {% block content %}
-<a href="{% url 'download_pdf' id='ec78bc1c-0202-4445-a48f-b154c4ceeaa8' %}">sdsd</a>
+
+<h1>Keçi ile ilgili yardımcı olabilecek bilgiler</h1>
+
+<h2>Genel Bilgiler</h2>
+<ul>
+  <li><a href="#">Keçi Hakkında</a></li>
+  <li><a href="#">Haklar</a></li>
+</ul>
+
+<h2>Arama Yapmaya Dair</h2>
+<ul>
+  <li><a href="#">Proje Bul</a></li>
+</ul>
+
+<h2>Kullanıcı Hesapları</h2>
+<ul>
+  <li><a href="#">Yeni Hesap Oluştur</a></li>
+  <li><a href="#">E-Mail Listesine Abone Ol</a></li>
+</ul>
+
+<h2>Proje Yüklemek ve Katkıda Bulunmak</h2>
+<ul>
+  <li><a href="#">Nasıl Proje Yükleyebilirim</a></li>
+  <li><a href="#">Nasıl Katkıda Bulunabilirim</a></li>
+</ul>
+
+<p> Aradığınız cevabı bulamadıysanız lütfen <a href="#">Kullanıcı Destek ekibimiz ile iletişime geçin</a>. </p>
+
 {% endblock %}
