--- a/keci/templates/keci_search.html
+++ b/keci/templates/keci_search.html
@@ -1,96 +1,166 @@
 {% extends "index.html" %}
+{% load static %}
 {% load custom_tags %}
 {% block title %}
   <title>Arama</title>
 {% endblock %}
+{% block head-js %}
+<!--script src="{% static 'js/keci_search.js' %}"></script-->
+{% endblock %}
 {% block content %}
 <h1>Deneme</h1>
-
+Bu aşağıdaki navbar için
 <form class="form-inline my-2 my-lg-0" action="{% url 'keci_search' %}">
   <input class="form-control mr-sm-2" type="search"   placeholder="Arama terimleri" aria-label="Search" name="search">
   <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Ara</button>
 </form>
+{{ query_term }}
+<div class="content">
 
-<ol class="project-list breathe-horizontal" start="1">
-  {% for project in projects %}
-  <li class="keci-result">
-    <div class="is-marginless">
-      <p class="list-title is-inline-block"><a href="{% url 'project' id=project.id %}">k-id:{{ project.id }}</a>
-        <span>&nbsp;[<a href="{% url 'download_pdf' id=project.id %}">pdf</a>, <a href="{% url 'download_pdf' id=project.id %}">other</a>]&nbsp;</span>
-      </p>
-      <div class="tags is-inline-block">
-        <span class="tag is-small is-link tooltip is-tooltip-top" data-tooltip="Computer Vision and Pattern Recognition">cs.CV</span>
-        </div>
-      
+  <form method="GET" action="{% url 'keci_search' %}" aria-role="search">
+    
+
+    
+    <div class="field has-addons-tablet">
+      <div class="control is-expanded">
+        <label for="query" class="hidden-label">Search term or terms</label>
+        
+          <input class="input is-medium" id="query" name="query" placeholder="Search term..." type="text" value="{{ query_term }}">
+        
+        
+      </div>
+
+      <div class="control">
+        <button class="button is-link is-medium">Search</button>
+      </div>
+
+    <div class="is-clearfix" style="height: 2.5em"> 
+      <div class="is-pulled-right">
+        
+        <a href="{% url 'keci_search' %}">Advanced Search</a>
+        
+      </div>
     </div>
-    
-    <p class="title is-5 mathjax">
+    <input type="hidden" name="order" value="11">
+    <input type="hidden" name="size" value="{{ size_term }}">
+  </form>
+
+  <div class="level">
+    <div class="level-left">
+      <form method="GET" action="{% url 'keci_search' %}">
+        <div class="" style="display: none;">
+          <input type="text" id="query" name="query" value="{{ query_term }}">
+        </div>
+        <div class="box">
+          <div class="">
+            <span>
+              <select name="size" id="size">
+                <option value="25" selected>25</option>
+                <option value="50">50</option>
+                <option value="100">100</option>
+                <option value="200">200</option>
+              </select>
+            </span>
+            <label for="size">sonuç, bir sayfada.</label>
+          </div>
+          <div class="">
+            <label for="order">Sonuçları sırala,</label>
+            <span>
+              <select name="order" id="order">
+                <option value="-announced-date">Yükleme tarihine göre (yeniden eskiye)</option>
+              </select>
+            </span>
+          </div>
+          <div class="">
+            <button class="">Hallet</button>
+          </div>
+        </div>
+      </form>
+    </div>
+  </div>
+  
+  <ol class="project-list breathe-horizontal" start="1">
+    {% for project in projects %}
+    <li class="keci-result">
+      <div class="is-marginless">
+        <p class="list-title is-inline-block"><a href="{% url 'project' id=project.id %}">k-id:{{ project.id }}</a>
+          <span>&nbsp;[<a href="{% url 'download_pdf' id=project.id %}">pdf</a>, <a href="{% url 'download_pdf' id=project.id %}">other</a>]&nbsp;</span>
+        </p>
+        <div class="tags is-inline-block">
+          <span class="tag is-small is-link tooltip is-tooltip-top" data-tooltip="Computer Vision and Pattern Recognition">cs.CV</span>
+          </div>
+        
+      </div>
       
-      {{project.title}}
+      <p class="title is-5 mathjax">
+        
+        {{project.title}}
+        
+      </p>
+      <p class="authors">
+        <span class="has-text-black-bis has-text-weight-semibold">Authors:</span>
+        
+        {% for author in project.authors.all %}
+        {{ author.name }},
+        {{ author.email }}
+        {% endfor %}
+        
+      </p>
       
-    </p>
-    <p class="authors">
-      <span class="has-text-black-bis has-text-weight-semibold">Authors:</span>
+      <p class="abstract mathjax">
+        <span class="search-hit">Abstract</span>:
+        <span class="abstract-short has-text-grey-dark mathjax" id="{{ project.id }}-abstract-short" style="display: inline;">
+          …Daha kısa abstract…
+          <a class="is-size-7" style="white-space: nowrap;" onclick="document.getElementById('{{ project.id }}-abstract-full').style.display = 'inline'; document.getElementById('{{ project.id }}-abstract-short').style.display = 'none';">▽ More</a>
+        </span>
+        <span class="abstract-full has-text-grey-dark mathjax" id="{{ project.id }}-abstract-full" style="display: none;">
+          {% with project.abstract|split:" " as words %}
+            {% for word in words %}
+              {% if word == search_project %}
+              <span class="search-hit mathjax">{{ word }}</span>
+              {% else %}
+                {{ word }}
+              {% endif %}
+            {% endfor %}
+          {% endwith %}
+          <a class="is-size-7" style="white-space: nowrap;" onclick="document.getElementById('{{ project.id }}-abstract-full').style.display = 'none'; document.getElementById('{{ project.id }}-abstract-short').style.display = 'inline';">△ Less</a>
+        </span>
+      </p>
       
-      {% for author in project.authors.all %}
-      {{ author.name }},
-      {{ author.email }}
-      {% endfor %}
+      <p class="stage"><span>Stage:</span> {{ project.current_stage.stages }}.
+    
+      </p>
+    
+      <p class="language"><span>Language:</span> {{ project.language.languages }}.
+    
+      </p>
+    
+      <p class="branches"><span>Branches:</span>
+        {% for branch in project.branches.all %}
+        {{ branch.branches }},
+        {% endfor %}.
+        
+      </p>
+    
+      <p class="is-size-7"><span class="has-text-black-bis has-text-weight-semibold">Submitted</span> {{project.pub_date}}; 
+        <span class="has-text-black-bis has-text-weight-semibold">originally announced**</span> May 2021**.
+        
+      </p>
       
-    </p>
-    
-    <p class="abstract mathjax">
-      <span class="search-hit">Abstract</span>:
-      <span class="abstract-short has-text-grey-dark mathjax" id="{{ project.id }}-abstract-short" style="display: inline;">
-        …Daha kısa abstract…
-        <a class="is-size-7" style="white-space: nowrap;" onclick="document.getElementById('{{ project.id }}-abstract-full').style.display = 'inline'; document.getElementById('{{ project.id }}-abstract-short').style.display = 'none';">▽ More</a>
-      </span>
-      <span class="abstract-full has-text-grey-dark mathjax" id="{{ project.id }}-abstract-full" style="display: none;">
-        {% with project.abstract|split:" " as words %}
-          {% for word in words %}
-            {% if word == search_project %}
-            <span class="search-hit mathjax">{{ word }}</span>
-            {% else %}
-              {{ word }}
-            {% endif %}
-          {% endfor %}
-        {% endwith %}
-        <a class="is-size-7" style="white-space: nowrap;" onclick="document.getElementById('{{ project.id }}-abstract-full').style.display = 'none'; document.getElementById('{{ project.id }}-abstract-short').style.display = 'inline';">△ Less</a>
-      </span>
-    </p>
-    
-    <p class="stage"><span>Stage:</span> {{ project.current_stage.stages }}.
-  
-    </p>
-  
-    <p class="language"><span>Language:</span> {{ project.language.languages }}.
-  
-    </p>
-  
-    <p class="branches"><span>Branches:</span>
-      {% for branch in project.branches.all %}
-      {{ branch.branches }},
-      {% endfor %}.
+      <p class="comments is-size-7">
+        <span class="has-text-black-bis has-text-weight-semibold">Comments:</span>
+        <span class="has-text-grey-dark mathjax">n pages, m figures and k tables; project page: https://path/to/projectpage</span>
+      </p>
       
-    </p>
-  
-    <p class="is-size-7"><span class="has-text-black-bis has-text-weight-semibold">Submitted</span> {{project.pub_date}}; 
-      <span class="has-text-black-bis has-text-weight-semibold">originally announced**</span> May 2021**.
+    
       
-    </p>
     
-    <p class="comments is-size-7">
-      <span class="has-text-black-bis has-text-weight-semibold">Comments:</span>
-      <span class="has-text-grey-dark mathjax">n pages, m figures and k tables; project page: http://path/to/projectpage</span>
-    </p>
-    
-  
-    
-  
-    
-  </li>
-  {% endfor %}
-</ol>
+      
+    </li>
+    {% endfor %}
+  </ol>
+</div>
+
 
 {% for project in projects %}
 <h1>{{forloop.counter}}. {{project.title}}</h1>
