--- a/keci/templates/keci_search.html
+++ b/keci/templates/keci_search.html
@@ -41,7 +41,7 @@ Bu aşağıdaki navbar için
         
       </div>
     </div>
-    <input type="hidden" name="order" value="11">
+    <input type="hidden" name="order" value="{{ order_term }}">
     <input type="hidden" name="size" value="{{ size_term }}">
   </form>
 
@@ -67,7 +67,8 @@ Bu aşağıdaki navbar için
             <label for="order">Sonuçları sırala,</label>
             <span>
               <select name="order" id="order">
-                <option value="-announced-date">Yükleme tarihine göre (yeniden eskiye)</option>
+                <option value="-pub_date">Yükleme tarihine göre (yeniden eskiye)</option>
+                <option value="pub_date">Yükleme tarihine göre (eskiden yeniye)</option>
               </select>
             </span>
           </div>
