--- a/keci/templates/index-eski.html
+++ b/keci/templates/index-eski.html
@@ -7,7 +7,7 @@
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       {% load static %}
       <link rel="shortcut icon" href="{% static 'images/logo.png' %}">
-      <link rel="stylesheet" type="text/css" href="{% static 'css/keci.css' %}">
+      <link rel="stylesheet" href="{% static 'css/keci.css' %}">
        <!-- Latest compiled and minified CSS -->
       <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
       <!-- jQuery library -->
@@ -37,45 +37,6 @@
       </script>
       {% block head-js %}
       {% endblock %}
-      <style>
-        .form-inline {
-            display: grid;
-            grid-auto-flow: column;
-            float: right;
-            margin-right: 75px;
-            margin-top: -40px;
-            line-height: 0.5em;
-            font-size: 12px;
-            width: auto;
-        }
-        .btn {
-            background-color: #711111;
-            color: white;
-            border: none;
-            border-radius: 4px;
-            line-height: 6px;
-            font-size: 12px;
-            padding-left: 20px;
-            padding-right: 20px;
-            border-top-left-radius: 0px;
-            border-bottom-left-radius: 0px;
-        }
-        .btn:hover {
-            background-color: rgb(184, 88, 88);
-        }
-        .form-control, .field, .btn {
-            height: 27px;
-        }
-        .form-control {
-            border-top-right-radius: 0px;
-            border-bottom-right-radius: 0px;
-        }
-        #field {
-            border:0px;
-            outline:none;
-            width: 90px;
-        }
-      </style>
     </head>
     <body>
       <nav>
@@ -86,16 +47,16 @@
           <a href="{% url 'keci_home' %}">Dökümanlar</a>
           <a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>
         </div>
-        <form class="form-inline" action="{% url 'keci_search' %}">
-          <input class="form-control" type="search" placeholder="Arama terimleri" aria-label="Search" name="search">
-          <select name="field" id="field">
-            <option value="all-fields">All fields</option>
-            <option value="title">Title</option>
-            <option value="abstract">Abstract</option>
-            <option value="author">Author</option>
-          </select>
-          <button class="btn btn-outline-success" type="submit">Ara</button>
-        </form>
+        <div class="search_topnav">
+          <input id="searchbar" type="text" placeholder="Proje adı veya id..."/><select id="branchbar">
+            <option value="Language">Bütün alanlar</option>
+            <option value="Language">Dil</option>
+            <option value="Formel">Formel</option>
+            <option value="Empirical">Empirik</option>
+            <option value="Experimental">Deneysel Veri</option>
+            <option value="Technical">Teknik</option>
+          </select><input id="keci_submit" type="submit" value="Ara">
+        </div>
         <a id="advanced_search" href="{% url 'keci_advanced_search' %}">Gelişmiş Arama</a>
       </nav>
       {% block content %}
