--- a/keci/templates/keci_advanced_search.html
+++ b/keci/templates/keci_advanced_search.html
@@ -3,187 +3,7 @@
   <title>Gelişmiş Arama</title>
 {% endblock %}
 {% block content %}
-<form method="GET" action="/search/" class="breathe-vertical" aria-role="search">
 
-  <div class="field has-addons-tablet">
-    <div class="control is-expanded">
-      <label for="query" class="hidden-label">Search term or terms</label>
-      
-        <input class="input is-medium" id="query" name="query" placeholder="Arama terimleri..." type="text" value="">
-      
-      
-    </div>
-    <div class="select control is-medium">
-      <label class="is-hidden" for="searchtype">Field</label>
-      <select class="is-medium" id="searchtype" name="searchtype"><option value="all">All fields</option><option value="title">Title</option><option value="author">Author(s)</option><option value="abstract">Abstract</option><option value="comments">Comments</option><option value="journal_ref">Journal reference</option><option value="acm_class">ACM classification</option><option value="msc_class">MSC classification</option><option value="report_num">Report number</option><option value="paper_id">arXiv identifier</option><option value="doi">DOI</option><option value="orcid">ORCID</option><option value="license">License (URI)</option><option value="author_id">arXiv author ID</option><option value="help">Help pages</option><option value="full_text">Full text</option></select>
-    </div>
-    <div class="control">
-        <button class="button is-link is-medium">Search</button>
-    </div>
-  </div>
-  <div class="field">
-    <div class="control is-size-7">
-      
-      <label class="radio">
-        <input checked="" id="abstracts-0" name="abstracts" type="radio" value="show"> Show abstracts
-      </label>
-      
-      <label class="radio">
-        <input id="abstracts-1" name="abstracts" type="radio" value="hide"> Hide abstracts
-      </label>
-      
-    </div>
-  </div>
-  <div class="is-clearfix" style="height: 2.5em"> 
-    <div class="is-pulled-right">
-      
-      <a href="/search/advanced">Advanced Search</a>
-      
-    </div>
-  </div>
-  <input type="hidden" name="order" value="-announced_date_first">
-  <input type="hidden" name="size" value="50">
-</form>
-
-
-
-
-
-<li class="arxiv-result">
-    <div class="is-marginless">
-      <p class="list-title is-inline-block"><a href="https://arxiv.org/abs/2105.02878">arXiv:2105.02878</a>
-        <span>&nbsp;[<a href="https://arxiv.org/pdf/2105.02878">pdf</a>, <a href="https://arxiv.org/format/2105.02878">other</a>]&nbsp;</span>
-      </p>
-      <div class="tags is-inline-block">
-        <span class="tag is-small is-link tooltip is-tooltip-top" data-tooltip="Computer Vision and Pattern Recognition">cs.CV</span>
-        </div>
-      
-    </div>
-    
-    <p class="title is-5 mathjax">
-      
-        Q-Match: Iterative Shape Matching via <span class="search-hit mathjax">Quantum</span> Annealing
-      
-    </p>
-    <p class="authors">
-      <span class="has-text-black-bis has-text-weight-semibold">Authors:</span>
-      
-      <a href="/search/?searchtype=author&amp;query=Benkner%2C+M+S">Marcel Seelbach Benkner</a>, 
-      
-      <a href="/search/?searchtype=author&amp;query=L%C3%A4hner%2C+Z">Zorah Lähner</a>, 
-      
-      <a href="/search/?searchtype=author&amp;query=Golyanik%2C+V">Vladislav Golyanik</a>, 
-      
-      <a href="/search/?searchtype=author&amp;query=Wunderlich%2C+C">Christof Wunderlich</a>, 
-      
-      <a href="/search/?searchtype=author&amp;query=Theobalt%2C+C">Christian Theobalt</a>, 
-      
-      <a href="/search/?searchtype=author&amp;query=Moeller%2C+M">Michael Moeller</a>
-      
-    </p>
-    
-    <p class="abstract mathjax">
-      <span class="search-hit">Abstract</span>:
-      <span class="abstract-short has-text-grey-dark mathjax" id="2105.02878v1-abstract-short" style="display: inline;">
-        …that becomes infeasible for shapes with high sampling density. A promising research direction is to tackle such quadratic optimization problems over binary variables with <span class="search-hit mathjax">quantum</span> annealing, which, in theory, allows to find globally optimal solutions relying on a new computational paradigm. Unfortunately, enforcing the linear equality constraints in QAPs via…
-        <a class="is-size-7" style="white-space: nowrap;" onclick="document.getElementById('2105.02878v1-abstract-full').style.display = 'inline'; document.getElementById('2105.02878v1-abstract-short').style.display = 'none';">▽ More</a>
-      </span>
-      <span class="abstract-full has-text-grey-dark mathjax" id="2105.02878v1-abstract-full" style="display: none;">
-        Finding shape correspondences can be formulated as an NP-hard quadratic assignment problem (QAP) that becomes infeasible for shapes with high sampling density. A promising research direction is to tackle such quadratic optimization problems over binary variables with <span class="search-hit mathjax">quantum</span> annealing, which, in theory, allows to find globally optimal solutions relying on a new computational paradigm. Unfortunately, enforcing the linear equality constraints in QAPs via a penalty significantly limits the success probability of such methods on currently available <span class="search-hit mathjax">quantum</span> hardware. To address this limitation, this paper proposes Q-Match, i.e., a new iterative <span class="search-hit mathjax">quantum</span> method for QAPs inspired by the alpha-expansion algorithm, which allows solving problems of an order of magnitude larger than current <span class="search-hit mathjax">quantum</span> methods. It works by implicitly enforcing the QAP constraints by updating the current estimates in a cyclic fashion. Further, Q-Match can be applied for shape matching problems iteratively, on a subset of well-chosen correspondences, allowing us to scale to real-world problems. Using the latest <span class="search-hit mathjax">quantum</span> annealer, the D-Wave Advantage, we evaluate the proposed method on a subset of QAPLIB as well as on isometric shape matching problems from the FAUST dataset.
-        <a class="is-size-7" style="white-space: nowrap;" onclick="document.getElementById('2105.02878v1-abstract-full').style.display = 'none'; document.getElementById('2105.02878v1-abstract-short').style.display = 'inline';">△ Less</a>
-      </span>
-    </p>
-    
-    <p class=""><span>Stage:</span> Yeni Başladı.
-
-    </p>
-
-    <p class=""><span>Language:</span> Türkçe.
-
-    </p>
-
-    <p class=""><span>Branches:</span> dil, formel.
-      
-    </p>
-
-    <p class="is-size-7"><span class="has-text-black-bis has-text-weight-semibold">Submitted</span> 6 May, 2021; 
-      <span class="has-text-black-bis has-text-weight-semibold">originally announced</span> May 2021.
-      
-    </p>
-    
-    <p class="comments is-size-7">
-      <span class="has-text-black-bis has-text-weight-semibold">Comments:</span>
-      <span class="has-text-grey-dark mathjax">16 pages, 12 figures and two tables; project page: http://gvv.mpi-inf.mpg.de/projects/QMATCH/</span>
-    </p>
-    
-
-    
-
-    
-  </li>
-
-
-
-  <li class="arxiv-result">
-    <div class="is-marginless">
-      <p class="list-title is-inline-block"><a href="https://arxiv.org/abs/2105.02878">arXiv:2105.02878</a>
-        <span>&nbsp;[<a href="https://arxiv.org/pdf/2105.02878">pdf</a>, <a href="https://arxiv.org/format/2105.02878">other</a>]&nbsp;</span>
-      </p>
-      <div class="tags is-inline-block">
-        <span class="tag is-small is-link tooltip is-tooltip-top" data-tooltip="Computer Vision and Pattern Recognition">cs.CV</span>
-        </div>
-      
-    </div>
-    
-    <p class="title is-5 mathjax">
-      
-        Q-Match: Iterative Shape Matching via <span class="search-hit mathjax">Quantum</span> Annealing
-      
-    </p>
-    <p class="authors">
-      <span class="has-text-black-bis has-text-weight-semibold">Authors:</span>
-      
-      <a href="/search/?searchtype=author&amp;query=Benkner%2C+M+S">Marcel Seelbach Benkner</a>, 
-      
-      <a href="/search/?searchtype=author&amp;query=L%C3%A4hner%2C+Z">Zorah Lähner</a>, 
-      
-      <a href="/search/?searchtype=author&amp;query=Golyanik%2C+V">Vladislav Golyanik</a>, 
-      
-      <a href="/search/?searchtype=author&amp;query=Wunderlich%2C+C">Christof Wunderlich</a>, 
-      
-      <a href="/search/?searchtype=author&amp;query=Theobalt%2C+C">Christian Theobalt</a>, 
-      
-      <a href="/search/?searchtype=author&amp;query=Moeller%2C+M">Michael Moeller</a>
-      
-    </p>
-    
-    <p class="abstract mathjax">
-      <span class="search-hit">Abstract</span>:
-      <span class="abstract-short has-text-grey-dark mathjax" id="2105.02878v1-abstract-short" style="display: inline;">
-        …that becomes infeasible for shapes with high sampling density. A promising research direction is to tackle such quadratic optimization problems over binary variables with <span class="search-hit mathjax">quantum</span> annealing, which, in theory, allows to find globally optimal solutions relying on a new computational paradigm. Unfortunately, enforcing the linear equality constraints in QAPs via…
-        <a class="is-size-7" style="white-space: nowrap;" onclick="document.getElementById('2105.02878v1-abstract-full').style.display = 'inline'; document.getElementById('2105.02878v1-abstract-short').style.display = 'none';">▽ More</a>
-      </span>
-      <span class="abstract-full has-text-grey-dark mathjax" id="2105.02878v1-abstract-full" style="display: none;">
-        Finding shape correspondences can be formulated as an NP-hard quadratic assignment problem (QAP) that becomes infeasible for shapes with high sampling density. A promising research direction is to tackle such quadratic optimization problems over binary variables with <span class="search-hit mathjax">quantum</span> annealing, which, in theory, allows to find globally optimal solutions relying on a new computational paradigm. Unfortunately, enforcing the linear equality constraints in QAPs via a penalty significantly limits the success probability of such methods on currently available <span class="search-hit mathjax">quantum</span> hardware. To address this limitation, this paper proposes Q-Match, i.e., a new iterative <span class="search-hit mathjax">quantum</span> method for QAPs inspired by the alpha-expansion algorithm, which allows solving problems of an order of magnitude larger than current <span class="search-hit mathjax">quantum</span> methods. It works by implicitly enforcing the QAP constraints by updating the current estimates in a cyclic fashion. Further, Q-Match can be applied for shape matching problems iteratively, on a subset of well-chosen correspondences, allowing us to scale to real-world problems. Using the latest <span class="search-hit mathjax">quantum</span> annealer, the D-Wave Advantage, we evaluate the proposed method on a subset of QAPLIB as well as on isometric shape matching problems from the FAUST dataset.
-        <a class="is-size-7" style="white-space: nowrap;" onclick="document.getElementById('2105.02878v1-abstract-full').style.display = 'none'; document.getElementById('2105.02878v1-abstract-short').style.display = 'inline';">△ Less</a>
-      </span>
-    </p>
-    
-
-    <p class="is-size-7"><span class="has-text-black-bis has-text-weight-semibold">Submitted</span> 6 May, 2021; 
-      <span class="has-text-black-bis has-text-weight-semibold">originally announced</span> May 2021.
-      
-    </p>
-    
-    <p class="comments is-size-7">
-      <span class="has-text-black-bis has-text-weight-semibold">Comments:</span>
-      <span class="has-text-grey-dark mathjax">16 pages, 12 figures and two tables; project page: http://gvv.mpi-inf.mpg.de/projects/QMATCH/</span>
-    </p>
-    
-
-    
-
-    
-  </li>
+{% include 'simple_search_pagination.html' %}
 
 {% endblock %}
