Fix navbar search and pagination

--- a/keci/templates/simple_search_pagination.html
+++ b/keci/templates/simple_search_pagination.html
@@ -1,7 +1,8 @@
+{% load custom_tags %}
 <nav class="pagination">
 
   {% if projects.has_previous %}
-    <a class="previous" href="?page={{ projects.previous_page_number }}">Previous</a>
+    <a class="previous" href="?{% url_replace request 'page' projects.previous_page_number %}">Previous</a>
   {% endif %}
 
   {% if projects.paginator.num_pages > 1 and projects.paginator.num_pages < 6 %}
@@ -9,9 +10,9 @@
     <ul class="pagination-list">
       {% for num in projects.paginator.page_range %}
         {% if num == projects.number %}
-          <li><a class="pagination-link is-current" href="{{ request.get_full_path }}&page={{num}}">{{num}}</a></li>
+          <li><a class="pagination-link is-current" href="?{% url_replace request 'page' num %}">{{num}}</a></li>
         {% else %}
-          <li><a class="pagination-link" href="{{ request.get_full_path }}&page={{num}}">{{num}}</a></li>
+          <li><a class="pagination-link" href="?{% url_replace request 'page' num %}">{{num}}</a></li>
         {% endif %}
       {% endfor %}
     </ul>
@@ -23,18 +24,18 @@
     <ul class="pagination-list">
       {% if projects.number > 3 %}
 
-        <li><a class="pagination-link" href="?page=1">1</a></li>...
-        {% if projects.has_previous %}<li><a class="pagination-link" href="?page={{ projects.previous_page_number }}">{{ projects.previous_page_number }}</a></li>{% endif %}
-        <li><a class="pagination-link is-current" href="?page={{ projects.number }}">{{ projects.number }}</a></li>
-        {% if projects.has_next %}<li><a class="pagination-link" href="?page={{ projects.next_page_number }}">{{ projects.next_page_number }}</a></li>{% endif %}
+        <li><a class="pagination-link" href="?{% url_replace request 'page' 1 %}">1</a></li>...
+        {% if projects.has_previous %}<li><a class="pagination-link" href="?{% url_replace request 'page' projects.previous_page_number %}">{{ projects.previous_page_number }}</a></li>{% endif %}
+        <li><a class="pagination-link is-current" href="?{% url_replace request 'page' projects.number %}">{{ projects.number }}</a></li>
+        {% if projects.has_next %}<li><a class="pagination-link" href="?{% url_replace request 'page' projects.next_page_number %}">{{ projects.next_page_number }}</a></li>{% endif %}
           
       {% else %}
 
         {% for i in '12345'|make_list %}
           {% if i == projects.number|slugify %}
-            <li><a class="pagination-link is-current" href="?page={{i}}">{{i}}</a></li>
+            <li><a class="pagination-link is-current" href="?{% url_replace request 'page' i %}">{{i}}</a></li>
           {% else %}
-            <li><a class="pagination-link" href="?page={{i}}">{{i}}</a></li>
+            <li><a class="pagination-link" href="?{% url_replace request 'page' i %}">{{i}}</a></li>
           {% endif %}
         {% endfor %}
 
@@ -44,7 +45,7 @@
   {% endif %}
 
   {% if projects.has_next %}
-    <a class="next" href="?page={{ projects.next_page_number }}">Next</a>
+    <a class="next" href="?{% url_replace request 'page' projects.next_page_number %}">Next</a>
   {% endif %}
 
 </nav>
