--- a/keci/templates/index.html
+++ b/keci/templates/index.html
@@ -87,7 +87,7 @@
           <a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>
         </div>
         <form class="form-inline" action="{% url 'keci_search' %}">
-          <input class="form-control" type="search" placeholder="Arama terimleri" aria-label="Search" name="search">
+          <input class="form-control" type="search" placeholder="Arama terimleri" aria-label="Search" name="query">
           <select name="field" id="field">
             <option value="all-fields">All fields</option>
             <option value="title">Title</option>
