--- a/keci/templates/keci_home.html
+++ b/keci/templates/keci_home.html
@@ -12,4 +12,10 @@
 </form>
 {{ form.title.value }}
 {{ document_data }}
+
+{% if user.is_authenticated %}
+  <p>You have already logged in.</p>
+{% else %}
+  <p>Login<a href="{% url 'login' %}">Here</a></p>
+{% endif %}
 {% endblock %}
